<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="telegram_bot_key"
            app:title="@string/telegram_bot_key"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="telegram_chat_id"
            app:title="@string/telegram_chat_id"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="sim0_number"
            app:title="@string/sim0_number"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="sim1_number"
            app:title="@string/sim1_number"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>